# lotus

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/: deps.py  main.py  schemas.py
api/routers/: bars.py  instruments.py  research.py
backtest/: __init__.py  download_ib.py  materialize.py  run.py
backtest/catalog/: __init__.py
backtest/costs/: __init__.py
backtest/engine/: __init__.py
backtest/hypotheses/: __init__.py
backtest/strategies/: __init__.py  sma_cross.py
cemetery/: 2026-07-04_intraday_regime_momentum.md
compute/: __init__.py
core/: config.py  provenance.py
db/: models.py  session.py
db/migrations/: env.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  app.css  chart.ts  main.ts  tokens.css
ingestion/: __init__.py  persistence.py
ingestion/binance/: __init__.py  __main__.py  bars.py  client.py
ingestion/hyperliquid/: __init__.py  __main__.py  bars.py  client.py  funding.py
ingestion/ibkr/: __init__.py  (+3 more)
registration/: 2026-07-04_intraday_regime_momentum.md  APPROVALS.md
reports/: data_qa.md  r1_replication.md
research/: acquire_binance.py  acquire_ibkr.py  acquire_mes.py  data_qa.py  h1_classifier.py  load_viz_bars.py  preflight_ibkr.py  r1_replication.py  sessions.py  stats.py
tests/: conftest.py  test_api.py  test_binance_client.py  test_funding.py  test_hyperliquid_client.py  test_hypotheses.py  test_materialize.py  test_models.py  test_persistence.py  test_provenance.py  test_research_api.py  test_sprint_sessions.py
(+10 files in other folders)
