[project]
name = "lotus"
version = "0.1.0"
description = "Lotus — quant fund platform: market-data ingestion + falsification-first backtesting (nautilus_trader) over Interactive Brokers and historical vendors."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "ib-async>=1.0.3",
    "nautilus_trader[ib]>=1.230",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ingestion", "backtest", "api", "db", "compute"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["core", "ingestion", "backtest", "api", "db", "compute", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
